test/fixtures/errors/partial-separator.mustache
<!DOCTYPE html>
<html>
    <head>
        <title>Page with partial separator error</title>
    </head>
    <body>
        <h1>{{title}}</h1>
        {{> partials/common/user | Name='John' Surname='Doe' }}
    </body>
</html>
